------------------------

- Automatic 50bp interval padding
- Added sub-clonal SNV state (SOMATIC.M0)
- Polished plots, added new GC-normalization and volcano plots
- Support for cell lines
- Improved somatic vs. germline status calling
- Better mapping bias estimation and correction
- Better copy number normalization using multiple best normals
- New GC-normalization for smaller gene panels
- Removed automatic curation, since the tuned likelihood model 
  of runAbsoluteCN was hard to beat
- More control over homozygous deletions (significant portion
  of wrong maximum likelihood solutions had many homozygous deletions)  


API CHANGES

- Deprecated functions: createSNPBlacklist, getDiploid, autoCurateResults
- Defunct functions: createExonWeightFile
- Changed defaults: 
    - min.normals 5 (from 10) in setMappingBiasVcf
    - max.segments 300 (from 200) in runAbsoluteCN               
    - min.targeted.base 5 (from 4) in filterTargets
    - max.homozygous.loss now a double(2) vector, with first element
      specifying the maximum fraction of genome deleted (default 5%) and the 
      second value the maximum size of a homozygous loss (default 10mb).
- Other minor changes:
    - Renamed some predictSomatic() output column names
    - Moved remove.off.target.snvs to filterVcfBasic
    - Moved normalDB from filterTargets to runAbsoluteCN, since it is now 
      use for more than target filtering.
    - Dropped BED file support in calculateGCContentByInterval
      Instead provide support for GRanges
    - poolCoverage: w argument now used as provided, not 
        normalized so that w[1] is 1
    - Removed ... from runAbsoluteCN
 
 
PLANNED FEATURES 

- Support for indels
- Better runtime performance by ignoring unlikely solutions early
- Better support for known, small deletions and amplifications (e.g. EGFRvIII,
  MYC)
- Better support for pool of normals
- Switch to S4 data structures (maybe)
- Whole dataset visualizations (maybe PureCN 1.8)