@@ -35,6 +35,8 @@
 #' @param chr.hash Mapping of non-numerical chromsome names to numerical names
 #' (e.g. chr1 to 1, chr2 to 2, etc.). If \code{NULL}, assume chromsomes are
 #' properly ordered.
+#' @param centromeres A \code{data.frame} with centromere positions in first
+#' three columns.  Currently not supported in this function.
 #' @param verbose Verbose output.
 #' @return \code{data.frame} containing the segmentation.
 #' @author Markus Riester
@@ -65,7 +67,7 @@ segmentationCBS <- function(normal, tumor, log.ratio, seg, plot.cnv,
     min.coverage, sampleid, target.weight.file = NULL, alpha = 0.005, undo.SD =
         NULL, vcf = NULL, tumor.id.in.vcf = 1, normal.id.in.vcf = NULL,
     max.segments = NULL, prune.hclust.h = NULL, prune.hclust.method = "ward.D",
-    chr.hash = NULL, verbose = TRUE) {
+    chr.hash = NULL, centromeres = NULL, verbose = TRUE) {
 
     if (is.null(chr.hash)) chr.hash <- .getChrHash(tumor$chr)
     
